Fix overflow on #content div

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -292,6 +292,7 @@ html, body, .container-fluid, .row-fluid, .col-md-2, .col-md-10, .col-md-9, .col
   font-size: 19px;
   padding-left: 0px;
   padding-right: 0px;
+  overflow: auto;
   a {
     color: #000000;
     text-decoration: none;
